// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`obojobo lib utils searchNodeModulesForOboNodes attempts to load all non-optional yarn packages 1`] = `
Array [
  "obojobo-chunks-action-button",
  "obojobo-modules-module",
  "obojobo-pages-page",
  "obojobo-sections-content",
]
`;

exports[`obojobo lib utils searchNodeModulesForOboNodes includes optional modules defined in OBO_OPTIONAL_NODES 1`] = `
Array [
  "obojobo-chunks-action-button",
  "obojobo-modules-module",
  "obojobo-pages-page",
  "obojobo-optional-node",
  "obojobo-optional-other-node",
  "obojobo-sections-content",
]
`;
